--- a/client-scaffolding/index.html
+++ b/client-scaffolding/index.html
@@ -2,14 +2,33 @@
 <html ng-app="myApp">
   <head>
     <link rel="stylesheet" href="app/styles.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-resource.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.min.js"></script>
+	  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.js"></script>
+	  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-resource.js"></script>
+	  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.js"></script>
   </head>
   <body>
     <div ng-view></div>
-	  <script src="app/app.js"></script>
+
+      <div id="chirpWidget">
+        <button data-toggle="collapse" data-target="#chirpForm">Wanna Chirp About It?</button>
+        <div id="chirpForm" class="collapse in">
+          <form>
+            <div class="form-group">
+              <label for="name-input">Name</label>
+              <input type="text" class="form-control" id="name-input"></input>
+            </div>
+            <div class="form-group">
+              <label for="chirp-input">Chirp It!</label>
+              <textarea class="form-control" id="chirp-input" placeholder="Share your thoughts because Millenials and Gen Zs think the world revolves around them"></textarea>
+              <button class="btn btn-default">Chirp</button>
+            </div>
+          </form>
+        </div>
+      </div>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	  <script type="text/javascript" src="app/app.js"></script>
   </body>
 </html>
