--- a/client-scaffolding/index.html
+++ b/client-scaffolding/index.html
@@ -9,24 +9,24 @@
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.js"></script>
   </head>
   <body>
-    <div ng-view></div>
-
-      <div id="chirpWidget">
-        <button data-toggle="collapse" data-target="#chirpForm">Wanna Chirp About It?</button>
-        <div id="chirpForm" class="collapse in">
-          <form>
-            <div class="form-group">
-              <label for="name-input">Name</label>
-              <input type="text" class="form-control" id="name-input"></input>
-            </div>
-            <div class="form-group">
-              <label for="chirp-input">Chirp It!</label>
-              <textarea class="form-control" id="chirp-input" placeholder="Share your thoughts because Millenials and Gen Zs think the world revolves around them"></textarea>
-              <button class="btn btn-default">Chirp</button>
-            </div>
-          </form>
-        </div>
+    <div id="chirpWidget">
+      <button data-toggle="collapse" data-target="#chirpForm">Wanna Chirp About It?</button>
+      <div id="chirpForm" class="collapse in">
+        <form>
+          <div class="form-group">
+            <label for="name-input">Name</label>
+            <input type="text" class="form-control" id="name-input" ng-model="user" required></input>
+          </div>
+          <div class="form-group">
+            <label for="chirp-input">Chirp It!</label>
+            <input type="text" class="form-control" row="3" id="chirp-input" placeholder="Share your thoughts" ng-model="message" required></input>
+            <button class="btn btn-default" ng-click="SendChirp()">Chirp</button>
+          </div>
+        </form>
       </div>
+    </div>
+    <div ng-view></div>
+    <a href="#/list">click me</a>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	  <script type="text/javascript" src="app/app.js"></script>
