--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 	  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-route.js"></script>
   </head>
   <body>
-    <div id="chirpWidget">
+    <div id="chirpWidget" data-ng-controller="PushController">
       <button data-toggle="collapse" data-target="#chirpForm">Wanna Chirp About It?</button>
       <div id="chirpForm" class="collapse in">
         <form>
