--- a/client/index.html
+++ b/client/index.html
@@ -11,16 +11,16 @@
   </head>
   <body>
     <!--Navbar  -->
-    <!--Navbar-->
-
- 
-     <nav class="navbar fixed-top navbar-light bg-faded">
-      <span class="navbar-brand" href="#/">
-      <img src="https://risdhillon.github.io/chirpv6/images/Chirplogo.png" width="40" height="40" class="d-inline-block align-top" alt="">
-      </span>
-      <span class="navbar-text primary-text">Chirper</span>
-       <span class="nav-item navbar-text"> <a class="nav-link" href="#/list">Latest</a>
-       </span>
+     <nav class="navbar fixed-top navbar-light bg-faded primary-text">
+      <div>
+        <div class="navbar-brand">
+          <a href="#/">
+            <img src="https://risdhillon.github.io/chirpv6/images/Chirplogo.png" width="40" height="40" class="d-inline-block align-top" alt="">
+            <span class="navbar-text primary-text">Chirper</span>
+          </a>
+        </div>
+          <div class="navbar-text move-down"> <a href="#/list">Latest</a></div>
+      </div>
     </nav>  
     <!-- Chirp Widget   -->
     <div id="chirpWidget" data-ng-controller="PushController">
